Updated test code to access the local services in the application context.